tests/positive/phase1/006_division.c
// TEST: division
// DESCRIPTION: Integer division
// EXPECTED_EXIT: 5
// ENVIRONMENT: hosted
// PHASE: 1
// STANDARD_REF: 6.5.5 (Multiplicative operators)

int main(void) {
    return 10 / 2;
}
